# bfc

./: Cargo.toml  Makefile.toml  build.rs
.github/workflows/: build_32bit_linux.yml  build_32bit_windows.yml  build_64bit_linux.yml  build_64bit_windows.yml
examples/: IO.bf  PrettyCool.bf
resources/: interpreter.c
scripts/: build-i686-pc-windows-msvc.ps1  build-i686-unknown-linux-gnu.sh  build-x86_64-pc-windows-msvc.ps1  build-x86_64-unknown-linux-gnu.sh  debug-i686-pc-windows-msvc.ps1  debug-i686-unknown-linux-gnu.sh  debug-x86_64-pc-windows-msvc.ps1  debug-x86_64-unknown-linux-gnu.sh
src/: built.rs  compiler.rs  console.rs  interpreter.rs  main.rs  reader.rs  writer.rs
